Исправил данные в тестовых логах. Стилизовал отображение данных.

--- a/js/index.html
+++ b/js/index.html
@@ -26,11 +26,12 @@
         <canvas id="fieldNav" width="500" height="500" class="log__nav"></canvas>
       </div>
     </div>
-    <div class="log__wrap-legend">
-      <div class="log__altitude">Высота</div>
-      <div class="log__time">Время</div>
-      <div class="log__engine">Мощность двигателя</div>
-    </div>
+    <ul class="log__legend">
+      <li class="log__item log__altitude">Высота</li>
+      <li class="log__item log__time">Время</li>
+      <li class="log__item log__engine">Двигателя</li>
+      <li class="log__item log__temp">Температура</li>
+    </ul>
   </div>
 
 
