--- a/js/index.html
+++ b/js/index.html
@@ -23,6 +23,7 @@
       <ul class="file__list"></ul>
       <div class="log">
         <canvas id="field" width="500" height="500" class="log__field"></canvas>
+        <canvas id="fieldNavRange" width="500" height="500" class="log__nav"></canvas>
         <canvas id="fieldNav" width="500" height="500" class="log__nav"></canvas>
       </div>
     </div>
