Немного продвинулся с выделялкой

--- a/js/index.html
+++ b/js/index.html
@@ -23,7 +23,7 @@
       <ul class="file__list"></ul>
       <div class="log">
         <canvas id="field" width="500" height="500" class="log__field"></canvas>
-        <canvas id="fieldNavRange" width="500" height="500" class="log__nav"></canvas>
+        <canvas id="fieldNavRange" width="500" height="500" class="log__nav log__range"></canvas>
         <canvas id="fieldNav" width="500" height="500" class="log__nav"></canvas>
       </div>
     </div>
@@ -32,6 +32,8 @@
       <li class="log__item log__time">Время</li>
       <li class="log__item log__engine">Двигателя</li>
       <li class="log__item log__temp">Температура</li>
+      <br>
+      <li class="log__item log__range-time">Выделено: </li>
     </ul>
   </div>
 
