--- a/js/index.html
+++ b/js/index.html
@@ -34,6 +34,7 @@
       <li class="log__item log__temp">Температура</li>
       <br>
       <li class="log__item log__range-time">Выделено: </li>
+      <li class="log__item log__range-rtc">Скороподъемность: </li>
     </ul>
   </div>
 
